Removed Roboto from Dashboard.

--- a/Kiba/KBADashboardController.xib
+++ b/Kiba/KBADashboardController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YLH-Uk-1wM">
-                    <rect key="frame" x="0.0" y="63" width="768" height="961"/>
+                    <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <dataDetectorType key="dataDetectorTypes"/>
@@ -26,7 +26,7 @@
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="YLH-Uk-1wM" secondAttribute="bottom" id="6WZ-ZW-NUy"/>
                 <constraint firstItem="YLH-Uk-1wM" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="CMV-uJ-MFI"/>
-                <constraint firstItem="YLH-Uk-1wM" firstAttribute="top" secondItem="1" secondAttribute="top" constant="63" id="EXv-Ob-do5"/>
+                <constraint firstItem="YLH-Uk-1wM" firstAttribute="top" secondItem="1" secondAttribute="top" id="EXv-Ob-do5"/>
                 <constraint firstAttribute="trailing" secondItem="YLH-Uk-1wM" secondAttribute="trailing" id="ebL-av-vRP"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
