--- a/Kiba/View/SelfService/KBASelfServContr.xib
+++ b/Kiba/View/SelfService/KBASelfServContr.xib
@@ -47,8 +47,8 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hidden" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </activityIndicatorView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="33" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
-                    <rect key="frame" x="620" y="267" width="200" height="481"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="32" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
+                    <rect key="frame" x="620" y="267" width="200" height="351"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="NH2-MO-QKT"/>
@@ -109,8 +109,8 @@
                         <action selector="changeToTransferView:" destination="-1" eventType="touchUpInside" id="JsL-W1-3jU"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="83" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
-                    <rect key="frame" x="204" y="267" width="200" height="481"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="98" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
+                    <rect key="frame" x="204" y="267" width="200" height="351"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="7Pz-Ig-7Oc"/>
@@ -119,8 +119,8 @@
                         <outlet property="dataSource" destination="IHt-Ar-9XJ" id="WpN-HI-jVE"/>
                     </connections>
                 </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v5C-FJ-aBY">
-                    <rect key="frame" x="412" y="267" width="200" height="481"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="120" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v5C-FJ-aBY">
+                    <rect key="frame" x="412" y="267" width="200" height="351"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -154,39 +154,41 @@
                         <constraint firstAttribute="height" constant="50" id="sS6-4g-Gif"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info_orange" translatesAutoresizingMaskIntoConstraints="NO" id="Wwh-8d-WNB">
-                    <rect key="frame" x="999" y="743" width="25" height="25"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJk-eS-jpR">
+                    <rect key="frame" x="944" y="688" width="50" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="tintColor" red="0.85882352939999995" green="0.42352941179999998" blue="0.058823529409999999" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="oDa-7q-D3H"/>
-                        <constraint firstAttribute="width" constant="25" id="tWA-fq-iO2"/>
+                        <constraint firstAttribute="width" constant="50" id="PUc-yg-eHO"/>
+                        <constraint firstAttribute="height" constant="50" id="YfS-YG-4DL"/>
                     </constraints>
-                </imageView>
+                    <state key="normal" backgroundImage="info_orange">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="VXW-8c-iZJ" firstAttribute="centerY" secondItem="GRJ-qB-IFQ" secondAttribute="centerY" constant="-0.5" id="1GP-Cv-dLo"/>
                 <constraint firstItem="TrA-BV-FUy" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="19" id="53g-jN-3mW"/>
                 <constraint firstItem="xkv-ch-zgH" firstAttribute="top" secondItem="Jc2-nY-JlY" secondAttribute="bottom" constant="8" symbolic="YES" id="6XL-OV-Ew6"/>
-                <constraint firstAttribute="bottom" secondItem="xkv-ch-zgH" secondAttribute="bottom" constant="20" symbolic="YES" id="AJk-Fp-8ah"/>
-                <constraint firstAttribute="trailing" secondItem="Wwh-8d-WNB" secondAttribute="trailing" id="Ay4-4X-4ZT"/>
+                <constraint firstAttribute="trailing" secondItem="DJk-eS-jpR" secondAttribute="trailing" constant="30" id="7by-A5-vmu"/>
+                <constraint firstAttribute="bottom" secondItem="xkv-ch-zgH" secondAttribute="bottom" constant="150" id="AJk-Fp-8ah"/>
                 <constraint firstItem="VXW-8c-iZJ" firstAttribute="baseline" secondItem="RzH-By-5M4" secondAttribute="baseline" id="Bze-kE-wPw"/>
                 <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="v5C-FJ-aBY" secondAttribute="top" id="EjJ-Zf-hiZ"/>
-                <constraint firstAttribute="bottom" secondItem="1tE-bi-Kop" secondAttribute="bottom" constant="20" symbolic="YES" id="HHI-BF-jdS"/>
+                <constraint firstAttribute="bottom" secondItem="1tE-bi-Kop" secondAttribute="bottom" constant="150" id="HHI-BF-jdS"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="centerY" secondItem="nJQ-Ck-JcJ" secondAttribute="centerY" constant="-0.5" id="K4g-aY-Nho"/>
                 <constraint firstItem="BX8-fG-G3Q" firstAttribute="leading" secondItem="VXW-8c-iZJ" secondAttribute="trailing" constant="8" symbolic="YES" id="LjR-eh-C8S"/>
                 <constraint firstItem="v5C-FJ-aBY" firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="LmM-Zk-ObS"/>
                 <constraint firstItem="BX8-fG-G3Q" firstAttribute="centerY" secondItem="RzH-By-5M4" secondAttribute="centerY" constant="0.5" id="MDT-HT-oqZ"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="26" id="NiI-yQ-u9z"/>
                 <constraint firstItem="VXW-8c-iZJ" firstAttribute="leading" secondItem="GRJ-qB-IFQ" secondAttribute="trailing" constant="8" symbolic="YES" id="Pm2-5C-yK3"/>
-                <constraint firstAttribute="bottom" secondItem="Wwh-8d-WNB" secondAttribute="bottom" id="QWe-3G-GFK"/>
                 <constraint firstItem="v5C-FJ-aBY" firstAttribute="top" secondItem="xkv-ch-zgH" secondAttribute="top" id="QgV-TT-rie"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="nJQ-Ck-JcJ" secondAttribute="trailing" constant="8" symbolic="YES" id="SDI-ml-Esk"/>
-                <constraint firstAttribute="bottom" secondItem="v5C-FJ-aBY" secondAttribute="bottom" constant="20" symbolic="YES" id="Xih-sT-yrC"/>
+                <constraint firstAttribute="bottom" secondItem="v5C-FJ-aBY" secondAttribute="bottom" constant="150" id="Xih-sT-yrC"/>
                 <constraint firstItem="RzH-By-5M4" firstAttribute="leading" secondItem="BX8-fG-G3Q" secondAttribute="trailing" constant="8" symbolic="YES" id="Yli-wc-fUj"/>
                 <constraint firstItem="GRJ-qB-IFQ" firstAttribute="leading" secondItem="Jc2-nY-JlY" secondAttribute="trailing" constant="8" symbolic="YES" id="ar5-y5-XbU"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="leading" secondItem="TrA-BV-FUy" secondAttribute="trailing" constant="13" id="bor-mQ-nQp"/>
+                <constraint firstAttribute="bottom" secondItem="DJk-eS-jpR" secondAttribute="bottom" constant="30" id="fJK-GY-GaC"/>
                 <constraint firstAttribute="centerX" secondItem="fQo-AD-f5o" secondAttribute="centerX" constant="-0.5" id="gYP-cF-eQo"/>
                 <constraint firstItem="xkv-ch-zgH" firstAttribute="leading" secondItem="nJQ-Ck-JcJ" secondAttribute="leading" id="gsS-8E-q00"/>
                 <constraint firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="hbc-la-kjq"/>
